mirrorservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mirrorservice-service
  name: mirrorservice-service
  namespace: mirror
spec:
  selector:
    app: mirrorservice
  ports:
  - name: 8003-8003
    port: 8003
    protocol: TCP
    targetPort: 8003
#  type: ClusterIP
  type: LoadBalancer
#  type: NodePort
